--- a/video_audio_screen_capture_index4.html
+++ b/video_audio_screen_capture_index4.html
@@ -421,15 +421,19 @@ async function combine_audio_video() {
 		const captureStream_videoElement = videoElement.mozCaptureStream();
 		console.log('captureStream_videoElement: ', captureStream_videoElement);
 
+		console.log('captureStream_videoElement.id: ', captureStream_videoElement.id);
+
 		const captureStream_audioElement = audioElement.mozCaptureStream();
 		console.log('captureStream_audioElement: ', captureStream_audioElement);
+
+		console.log('captureStream_audioElement.id: ', captureStream_audioElement.id);
 		
-		const captureStream_videoElement_tracks = captureStream_videoElement.getVideoTracks();
+		const captureStream_videoElement_tracks = captureStream_videoElement.getTrackById(captureStream_videoElement.id);
 		console.log('captureStream_videoElement_tracks: ', captureStream_videoElement_tracks);
 
-		const captureStream_audioElement_tracks = captureStream_audioElement.getVideoTracks();
+		const captureStream_audioElement_tracks = captureStream_audioElement.getTrackById(captureStream_audioElement_tracks.id);
 		console.log('captureStream_audioElement_tracks: ', captureStream_audioElement_tracks);
-		
+
 		// stream.addTrack(videoElement.mozCaptureStream().getVideoTracks()[0]);
 		// stream.addTrack(audioElement.mozCaptureStream().getAudioTracks()[0]);
 	} else {
@@ -449,7 +453,18 @@ async function combine_audio_video() {
 // -------------------------------------------------
 
 
-  
+// -------------------------------------------------
+
+
+// -------------------------------------------------
+
+
+// -------------------------------------------------
+
+
+// -------------------------------------------------
+
+
 </script>
 </body>
 </html>
