--- a/screen_recorder1.html
+++ b/screen_recorder1.html
@@ -240,7 +240,7 @@ function play_sound(blob_object) {
 // -------------------------------------------------
 // C. Modify an existing audio and/or video file from file
 // -------------------------------------------------
-async function load_audio_file_from_PC() {
+async function load_audio_file_from_file() {
 	
 	const url_audio = await fetch_file(base64_string_audio, file_name_audio, "audio/webm");
 	console.log('url_audio: ', url_audio);
@@ -276,7 +276,7 @@ async function previewInput_audio(event) {
 	// ---------------------
 	
 	// console.log("event :", event);
-	// Automatic path to the audio on the PC
+	// Automatic path to the audio file
 	// document.getElementById("file_path").innerHTML = event.srcElement.value;
 	
 	// ---------------------
@@ -308,7 +308,7 @@ async function previewInput_audio(event) {
 
 // -------------------------------------------------
 
-async function load_video_file_from_PC() {
+async function load_video_file_from_file() {
 	
 	const url_video = await fetch_file(base64_string_video, file_name_video, "video/webm");
 	console.log('url_video: ', url_video);
@@ -364,8 +364,8 @@ async function modify_existing_audio_and_or_video_from_file() {
 
 	// --------------------------
 	
-	const audioElement = await load_audio_file_from_PC();
-	const videoElement = await load_video_file_from_PC();
+	const audioElement = await load_audio_file_from_file();
+	const videoElement = await load_video_file_from_file();
 		
 	// --------------------------
 
@@ -637,6 +637,129 @@ async function obtain_audio_information_way0(binaryString_audio0) {
 
 // -------------------------------------------------
 
+
+// -------------------------------------------------
+
+
+
+// -------------------------------------------------
+// 2. Combine a Video and Audio Track
+// -------------------------------------------------
+async function combine_audio_video(videoElement, audioElement) {
+	
+	const stream = new MediaStream();
+
+	console.log('browser check: ', (/firefox/i).test(navigator.userAgent));
+	
+	if ((/firefox/i).test(navigator.userAgent) == true) {
+		// Test - worked
+		const captureStream_videoElement = videoElement.mozCaptureStream();
+		console.log('captureStream_videoElement: ', captureStream_videoElement);
+
+		// var video_id = captureStream_videoElement.id.slice(1, captureStream_videoElement.id.length-1);
+		var video_id = captureStream_videoElement.id;
+		console.log('video_id: ', video_id);
+
+		const captureStream_audioElement = audioElement.mozCaptureStream();
+		console.log('captureStream_audioElement: ', captureStream_audioElement);
+
+		// var audio_id = captureStream_audioElement.id.slice(1, captureStream_videoElement.id.length-1);
+		var audio_id = captureStream_audioElement.id;
+		console.log('audio_id: ', audio_id);
+
+		// -------------------------------------
+		
+		const captureStream_videoElement_tracks = captureStream_videoElement.getTrackById(video_id);
+		console.log('captureStream_videoElement_tracks: ', captureStream_videoElement_tracks);
+
+		const captureStream_audioElement_tracks = captureStream_audioElement.getTrackById(audio_id);
+		console.log('captureStream_audioElement_tracks: ', captureStream_audioElement_tracks);
+
+		// stream.addTrack(videoElement.mozCaptureStream().getVideoTracks()[0]);
+		// stream.addTrack(audioElement.mozCaptureStream().getAudioTracks()[0]);
+	} else {
+		// const captureStream = videoElement.captureStream();
+		//
+		stream.addTrack(videoElement.captureStream().getVideoTracks()[0]);
+		stream.addTrack(audioElement.captureStream().getAudioTracks()[0]);
+	}
+	
+
+  
+}
+  
+// -------------------------------------------------
+
+
+
+// -------------------------------------------------
+// 3. Append two Video Tracks
+// -------------------------------------------------
+
+
+
+
+
+// -------------------------------------------------
+// MODIFY AUDIO AND VIDEO SUBFUNCTIONS
+// -------------------------------------------------
+
+	
+// -----------------------------------------------
+
+async function create_dynamic_canvasElement(w) {
+
+  	const index = 0;
+  
+	// Create a canvas element
+	var canvasElement = document.createElement('canvas');
+
+	// Set the width and height of the canvas
+	canvasElement.width = w;
+	canvasElement.height = canvasElement.width;
+	      
+	// Get the 2D rendering context of the canvas
+	var ctx = canvasElement.getContext("2d");
+	
+	if (index == 0) {
+		canvasElement.style.left = 40+'px';
+	} else {
+		let tot = index*canvasElement.width + 40;
+		canvasElement.style.left = tot+'px';
+	}
+	
+	// Add the canvas to the document body or any other desired element
+	document.getElementById('data_display').appendChild(canvasElement);
+
+	return ctx;
+}
+
+// -------------------------------------------------
+
+async function fetch_file(base64_string, file_name, file_type) {
+
+	// console.log('base64_string: ', base64_string.slice(0,20));
+	
+	return await fetch(base64_string)
+		.then(response => response.blob())
+		.then(async function(blob_object) {
+			// console.log('blob_object: ', blob_object);
+			return new File ([blob_object], file_name, {type: file_type});
+		})
+		.then(async function(file_blob_object) {
+			// console.log('file_blob_object: ', file_blob_object);
+			return URL.createObjectURL(file_blob_object);
+		})
+		.catch(error => { document.getElementById('error').innerHTML = error; });
+}
+
+// -----------------------------------------------
+
+
+	
+// -------------------------------------------------
+// AUDIO PRE-PROCESSING SUBFUNCTIONS
+// -------------------------------------------------
 async function separate_stero_channels(normalArray_normalized) {
 
   // Audio files with two channels are interleaved, meaning that [channel0_datapoint0, channel1_datapoint0, channel0_datapoint1, channel1_datapoint1, ...channel0_datapointn-1, channel1_datapointn-1] 
@@ -704,144 +827,29 @@ async function decodeAudioData_from_binaryString_to_uint8Array(binaryString) {
 	// var normalArray_normalized = await normalArray.map((val, ind) => { return val/99; });  // gave wrong results
 	// console.log('normalArray max min: ', [normalArray_normalized.sort().shift(), normalArray_normalized.sort().pop()])
 	// RESULT: it gives a value from 0 to 2.5656... not exactly what was expected
+	
+	// OR
 
-  // OR
-
-  // Try with Tensorflow library
-  const tf_normalArray = tf.tensor1d(normalArray);
-  const max_amp = tf.scalar(arr_char.max_amp);
-  var normalArray_normalized_tf = await tf_normalArray.div(max_amp);
-  
-  // --------------------
-
-  // Convert Tensorflow_array to Array
-  const normalArray_normalized = normalArray_normalized_tf.arraySync();
-  console.log('normalArray max min: ', [normalArray_normalized.sort().shift(), normalArray_normalized.sort().pop()])
-  
-  // --------------------
-
-  // Only for verification
+	// Try with Tensorflow library
+	const tf_normalArray = tf.tensor1d(normalArray);
+	const max_amp = tf.scalar(arr_char.max_amp);
+	var normalArray_normalized_tf = await tf_normalArray.div(max_amp);
+	  
+	// --------------------
+	
+	// Convert Tensorflow_array to Array
+	const normalArray_normalized = normalArray_normalized_tf.arraySync();
+	console.log('normalArray max min: ', [normalArray_normalized.sort().shift(), normalArray_normalized.sort().pop()])
+	  
+	// --------------------
+	
+	// Only for verification
 	var arr_char_normalized = await obtain_array_characteristics(normalArray_normalized);
 	console.log('arr_char_normalized: ', arr_char_normalized);
 	
 	// --------------------
 
 	return normalArray_normalized;
-}
-
-// -------------------------------------------------
-
-
-
-// -------------------------------------------------
-// 2. Combine a Video and Audio Track
-// -------------------------------------------------
-async function combine_audio_video(videoElement, audioElement) {
-	
-	const stream = new MediaStream();
-
-	console.log('browser check: ', (/firefox/i).test(navigator.userAgent));
-	
-	if ((/firefox/i).test(navigator.userAgent) == true) {
-		// Test - worked
-		const captureStream_videoElement = videoElement.mozCaptureStream();
-		console.log('captureStream_videoElement: ', captureStream_videoElement);
-
-		// var video_id = captureStream_videoElement.id.slice(1, captureStream_videoElement.id.length-1);
-		var video_id = captureStream_videoElement.id;
-		console.log('video_id: ', video_id);
-
-		const captureStream_audioElement = audioElement.mozCaptureStream();
-		console.log('captureStream_audioElement: ', captureStream_audioElement);
-
-		// var audio_id = captureStream_audioElement.id.slice(1, captureStream_videoElement.id.length-1);
-		var audio_id = captureStream_audioElement.id;
-		console.log('audio_id: ', audio_id);
-
-		// -------------------------------------
-		
-		const captureStream_videoElement_tracks = captureStream_videoElement.getTrackById(video_id);
-		console.log('captureStream_videoElement_tracks: ', captureStream_videoElement_tracks);
-
-		const captureStream_audioElement_tracks = captureStream_audioElement.getTrackById(audio_id);
-		console.log('captureStream_audioElement_tracks: ', captureStream_audioElement_tracks);
-
-		// stream.addTrack(videoElement.mozCaptureStream().getVideoTracks()[0]);
-		// stream.addTrack(audioElement.mozCaptureStream().getAudioTracks()[0]);
-	} else {
-		// const captureStream = videoElement.captureStream();
-		//
-		stream.addTrack(videoElement.captureStream().getVideoTracks()[0]);
-		stream.addTrack(audioElement.captureStream().getAudioTracks()[0]);
-	}
-	
-
-  
-}
-  
-// -------------------------------------------------
-
-
-
-// -------------------------------------------------
-// 3. Append two Video Tracks
-// -------------------------------------------------
-
-
-
-
-
-// -------------------------------------------------
-// SUBFUNCTIONS
-// -------------------------------------------------
-
-	
-// -----------------------------------------------
-
-async function create_dynamic_canvasElement(w) {
-
-  	const index = 0;
-  
-	// Create a canvas element
-	var canvasElement = document.createElement('canvas');
-
-	// Set the width and height of the canvas
-	canvasElement.width = w;
-	canvasElement.height = canvasElement.width;
-	      
-	// Get the 2D rendering context of the canvas
-	var ctx = canvasElement.getContext("2d");
-	
-	if (index == 0) {
-		canvasElement.style.left = 40+'px';
-	} else {
-		let tot = index*canvasElement.width + 40;
-		canvasElement.style.left = tot+'px';
-	}
-	
-	// Add the canvas to the document body or any other desired element
-	document.getElementById('data_display').appendChild(canvasElement);
-
-	return ctx;
-}
-
-// -------------------------------------------------
-
-async function fetch_file(base64_string, file_name, file_type) {
-
-	// console.log('base64_string: ', base64_string.slice(0,20));
-	
-	return await fetch(base64_string)
-		.then(response => response.blob())
-		.then(async function(blob_object) {
-			// console.log('blob_object: ', blob_object);
-			return new File ([blob_object], file_name, {type: file_type});
-		})
-		.then(async function(file_blob_object) {
-			// console.log('file_blob_object: ', file_blob_object);
-			return URL.createObjectURL(file_blob_object);
-		})
-		.catch(error => { document.getElementById('error').innerHTML = error; });
 }
 
 // -----------------------------------------------
@@ -892,6 +900,14 @@ async function std(arr) {
 }
   
 // -------------------------------------------------
+
+
+
+
+
+
+
+	
 
 // Only works in Chrome
 // https://developer.mozilla.org/en-US/docs/Web/API/SpeechRecognition
